fix: shadow box from social links no longer overlapping

--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ a:hover {
     justify-content: center;
     align-items: center;
     gap: 30px;
+    z-index: 49;
 
 
 }
@@ -139,7 +140,7 @@ a:hover {
     grid-row: 2;
     grid-column: -2 / -1;
     background-color: var(--white);
-    box-shadow: 0px 10px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: -5px 10px 8px rgba(0, 0, 0, 0.2);
 
     display: flex;
     align-items: center;
